--- a/component/pom.xml
+++ b/component/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>component</artifactId>
     <packaging>jar</packaging>
     <name>TINKAR: Component</name>
+    <properties>
+        <jacoco.version>0.8.6</jacoco.version>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+        <sonar.language>java</sonar.language>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.eclipse.collections</groupId>
@@ -49,7 +56,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
