--- a/provider/data-mapdb-provider/pom.xml
+++ b/provider/data-mapdb-provider/pom.xml
@@ -7,9 +7,9 @@
         <groupId>org.hl7.tinkar</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>primitive-data-mapdb</artifactId>
+    <artifactId>data-mapdb-provider</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR Provider: Primitive data - MapDb</name>
+    <name>TINKAR Provider: Data - MapDb</name>
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
