Downgraded from JDK 15 to JDK 11.
Also some additional timing reporting for DTO to provider load.

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
         <module>common</module>
         <module>component</module>
         <module>entity</module>
-        <module>dto</module>
+<!--        <module>dto</module>-->
         <module>launcher</module>
         <module>lombok-dto</module>
         <module>metric</module>
