--- a/launcher/pom.xml
+++ b/launcher/pom.xml
@@ -17,12 +17,17 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>chronology-ephemeral</artifactId>
+            <artifactId>component</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>chronology-persistent</artifactId>
+            <artifactId>data-ephemeral-provider</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>data-mapdb-provider</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
