--- a/provider/data-websocket-server-provider/pom.xml
+++ b/provider/data-websocket-server-provider/pom.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>tinkar</artifactId>
+        <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>launcher</artifactId>
+    <artifactId>data-websocket-server-provider</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR: Launcher</name>
+    <name>TINKAR Provider: Data - Websocket server</name>
     <dependencies>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>entity-provider</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>common</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
+       </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>component</artifactId>
+            <artifactId>test-util</artifactId>
             <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hl7.tinkar</groupId>
-            <artifactId>data-ephemeral-provider</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hl7.tinkar</groupId>
-            <artifactId>data-mapdb-provider</artifactId>
-            <version>${project.parent.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>io.activej</groupId>
-            <artifactId>activej-launcher</artifactId>
+            <artifactId>activej-launchers-http</artifactId>
             <version>${activej.version}</version>
         </dependency>
     </dependencies>
-</project>
+ </project>
