--- a/jpms-deps/record-builder-core/pom.xml
+++ b/jpms-deps/record-builder-core/pom.xml
@@ -7,9 +7,9 @@
         <groupId>org.hl7.tinkar</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>mvstore</artifactId>
+    <artifactId>record-builder-core</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR: MVStore</name>
+    <name>TINKAR: Record builder</name>
     <build>
         <plugins>
             <plugin>
@@ -28,13 +28,13 @@
                             <modules>
                                 <module>
                                     <artifact>
-                                        <groupId>com.h2database</groupId>
-                                        <artifactId>h2-mvstore</artifactId>
-                                        <version>${h2-mvstore.version}</version>
+                                        <groupId>io.soabase.record-builder</groupId>
+                                        <artifactId>record-builder-core</artifactId>
+                                        <version>${record-builder-core.version}</version>
                                     </artifact>
                                     <moduleInfoSource>
-                                        open module org.hl7.tinkar.mvstore {
-                                            exports org.h2.mvstore;
+                                        module org.hl7.tinkar.record.builder {
+                                            exports io.soabase.recordbuilder.core;
                                         }
                                     </moduleInfoSource>
                                 </module>
@@ -52,11 +52,8 @@
                         <configuration>
                             <target>
                                 <echo message="unzipping file" />
-                                <unzip src="${project.build.directory}/moditect/h2-mvstore-${h2-mvstore.version}.jar"
+                                <unzip src="${project.build.directory}/moditect/record-builder-core-${record-builder-core.version}.jar"
                                        dest="${project.build.directory}/classes/" />
-                                <move file="${project.build.directory}/classes/META-INF/versions/9/org/h2/util/Bits.class"
-                                      tofile="${project.build.directory}/classes/org/h2/util/Bits.class"/>
-                                <delete dir="${project.build.directory}/classes/META-INF/versions/"/>
                             </target>
                         </configuration>
                         <goals>
