--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
     <properties>
+        <auto-service.version>1.0-rc7</auto-service.version>
         <activej.version>4.0-rc1</activej.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
         <caffeine.version>3.0.0</caffeine.version>
@@ -93,6 +94,7 @@
     </build>
     <modules>
         <module>activej</module>
+        <module>auto-service</module>
         <module>caffeine</module>
         <module>chronicle-map</module>
         <module>eclipse-collections</module>
