--- a/tinkar-core/provider/data-spinedarray-provider/pom.xml
+++ b/tinkar-core/provider/data-spinedarray-provider/pom.xml
@@ -29,9 +29,15 @@
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>${project.parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
             <artifactId>entity-provider</artifactId>
             <version>${project.parent.version}</version>
-            <!--            <scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
