--- a/tinkar-core/terms/pom.xml
+++ b/tinkar-core/terms/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>entity</artifactId>
+            <artifactId>component</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
